--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-	"test": "vitest",
-	"coverage": "vitest run --coverage",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "@eslint/js": "^9.39.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
